--- a/joey.html
+++ b/joey.html
@@ -46,7 +46,7 @@ ul.breadcrumb li a {
 
 <body>
 <ul class="breadcrumb">
-  <li><a href="blog.html">Home </a></li>
+  <li><a href="index.html">Home </a></li>
 <li class="right angle icon divider"></li> 
   <li><a href="joey.html">  Celeb </a></li>
 <i class="right angle icon divider"></i> 
