--- a/monica.html
+++ b/monica.html
@@ -47,7 +47,7 @@ ul.breadcrumb li a {
 
 <body>
 <ul class="breadcrumb">
-  <li><a href="blog.html">Home </a></li>
+  <li><a href="index.html">Home </a></li>
 <li class="right angle icon divider"></li> 
   <li><a href="monica.html">  Celeb </a></li>
 <i class="right angle icon divider"></i> 
